AWARE/distribution/cuobjdump_to_ptxplus/ptx.output
Terminals unused in grammar

   BRANCHTARGETS_DIRECTIVE
   BYTE_DIRECTIVE
   CALLPROTOTYPE_DIRECTIVE
   CALLTARGETS_DIRECTIVE
   MAXNNREG_DIRECTIVE
   REQNTID_DIRECTIVE
   SECTION_DIRECTIVE
   STRUCT_DIRECTIVE
   UNION_DIRECTIVE
   PERIOD


State 297 conflicts: 1 reduce/reduce


Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input directive_statement
    3      | input function_defn
    4      | input function_decl

    5 $@1: %empty

    6 function_defn: function_decl $@1 statement_block

    7 $@2: %empty

    8 $@3: %empty

    9 function_defn: function_decl $@2 block_spec_list $@3 statement_block

   10 block_spec: MAXNTID_DIRECTIVE INT_OPERAND COMMA INT_OPERAND COMMA INT_OPERAND
   11           | MINNCTAPERSM_DIRECTIVE INT_OPERAND
   12           | MAXNCTAPERSM_DIRECTIVE INT_OPERAND

   13 block_spec_list: block_spec
   14                | block_spec_list block_spec

   15 $@4: %empty

   16 $@5: %empty

   17 function_decl: function_decl_header LEFT_PAREN $@4 param_entry RIGHT_PAREN $@5 function_ident_param

   18 $@6: %empty

   19 function_decl: function_decl_header $@6 function_ident_param
   20              | function_decl_header

   21 $@7: %empty

   22 $@8: %empty

   23 function_ident_param: IDENTIFIER $@7 LEFT_PAREN $@8 param_list RIGHT_PAREN
   24                     | IDENTIFIER

   25 function_decl_header: ENTRY_DIRECTIVE
   26                     | FUNC_DIRECTIVE
   27                     | VISIBLE_DIRECTIVE FUNC_DIRECTIVE
   28                     | EXTERN_DIRECTIVE FUNC_DIRECTIVE

   29 param_list: %empty
   30           | param_entry

   31 $@9: %empty

   32 param_list: param_list COMMA $@9 param_entry

   33 $@10: %empty

   34 param_entry: PARAM_DIRECTIVE $@10 variable_spec ptr_spec identifier_spec

   35 $@11: %empty

   36 param_entry: REG_DIRECTIVE $@11 variable_spec identifier_spec

   37 ptr_spec: %empty
   38         | PTR_DIRECTIVE ptr_space_spec ptr_align_spec
   39         | PTR_DIRECTIVE ptr_align_spec

   40 ptr_space_spec: GLOBAL_DIRECTIVE
   41               | LOCAL_DIRECTIVE
   42               | SHARED_DIRECTIVE

   43 ptr_align_spec: ALIGN_DIRECTIVE INT_OPERAND

   44 statement_block: LEFT_BRACE statement_list RIGHT_BRACE

   45 statement_list: directive_statement
   46               | instruction_statement
   47               | statement_list directive_statement
   48               | statement_list instruction_statement
   49               | statement_list statement_block
   50               | statement_block

   51 directive_statement: variable_declaration SEMI_COLON
   52                    | VERSION_DIRECTIVE DOUBLE_OPERAND
   53                    | VERSION_DIRECTIVE DOUBLE_OPERAND PLUS
   54                    | ADDRESS_SIZE_DIRECTIVE INT_OPERAND
   55                    | TARGET_DIRECTIVE IDENTIFIER COMMA IDENTIFIER
   56                    | TARGET_DIRECTIVE IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER
   57                    | TARGET_DIRECTIVE IDENTIFIER
   58                    | FILE_DIRECTIVE INT_OPERAND STRING
   59                    | LOC_DIRECTIVE INT_OPERAND INT_OPERAND INT_OPERAND
   60                    | PRAGMA_DIRECTIVE STRING SEMI_COLON
   61                    | function_decl SEMI_COLON

   62 variable_declaration: variable_spec identifier_list
   63                     | variable_spec identifier_spec EQUALS initializer_list
   64                     | variable_spec identifier_spec EQUALS literal_operand
   65                     | CONSTPTR_DIRECTIVE IDENTIFIER COMMA IDENTIFIER COMMA INT_OPERAND

   66 variable_spec: var_spec_list

   67 identifier_list: identifier_spec
   68                | identifier_list COMMA identifier_spec

   69 identifier_spec: IDENTIFIER
   70                | IDENTIFIER LEFT_ANGLE_BRACKET INT_OPERAND RIGHT_ANGLE_BRACKET
   71                | IDENTIFIER LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
   72                | IDENTIFIER LEFT_SQUARE_BRACKET INT_OPERAND RIGHT_SQUARE_BRACKET

   73 var_spec_list: var_spec
   74              | var_spec_list var_spec

   75 var_spec: space_spec
   76         | type_spec
   77         | align_spec
   78         | EXTERN_DIRECTIVE

   79 align_spec: ALIGN_DIRECTIVE INT_OPERAND

   80 space_spec: REG_DIRECTIVE
   81           | SREG_DIRECTIVE
   82           | addressable_spec

   83 addressable_spec: CONST_DIRECTIVE
   84                 | GLOBAL_DIRECTIVE
   85                 | LOCAL_DIRECTIVE
   86                 | PARAM_DIRECTIVE
   87                 | SHARED_DIRECTIVE
   88                 | SURF_DIRECTIVE
   89                 | TEX_DIRECTIVE

   90 type_spec: scalar_type
   91          | vector_spec scalar_type

   92 vector_spec: V2_TYPE
   93            | V3_TYPE
   94            | V4_TYPE

   95 scalar_type: S8_TYPE
   96            | S16_TYPE
   97            | S32_TYPE
   98            | S64_TYPE
   99            | U8_TYPE
  100            | U16_TYPE
  101            | U32_TYPE
  102            | U64_TYPE
  103            | F16_TYPE
  104            | F32_TYPE
  105            | F64_TYPE
  106            | FF64_TYPE
  107            | B8_TYPE
  108            | B16_TYPE
  109            | B32_TYPE
  110            | B64_TYPE
  111            | BB64_TYPE
  112            | BB128_TYPE
  113            | PRED_TYPE
  114            | TEXREF_TYPE
  115            | SAMPLERREF_TYPE
  116            | SURFREF_TYPE

  117 initializer_list: LEFT_BRACE literal_list RIGHT_BRACE
  118                 | LEFT_BRACE initializer_list RIGHT_BRACE

  119 literal_list: literal_operand
  120             | literal_list COMMA literal_operand

  121 instruction_statement: instruction SEMI_COLON
  122                      | IDENTIFIER COLON
  123                      | pred_spec instruction SEMI_COLON

  124 $@12: %empty

  125 instruction: opcode_spec LEFT_PAREN operand RIGHT_PAREN $@12 COMMA operand COMMA LEFT_PAREN operand_list RIGHT_PAREN
  126            | opcode_spec operand COMMA LEFT_PAREN operand_list RIGHT_PAREN
  127            | opcode_spec operand COMMA LEFT_PAREN RIGHT_PAREN
  128            | opcode_spec operand_list
  129            | opcode_spec

  130 $@13: %empty

  131 opcode_spec: OPCODE $@13 option_list
  132            | OPCODE

  133 pred_spec: PRED IDENTIFIER
  134          | PRED EXCLAMATION IDENTIFIER
  135          | PRED IDENTIFIER LT_OPTION
  136          | PRED IDENTIFIER EQ_OPTION
  137          | PRED IDENTIFIER LE_OPTION
  138          | PRED IDENTIFIER NE_OPTION
  139          | PRED IDENTIFIER GE_OPTION
  140          | PRED IDENTIFIER EQU_OPTION
  141          | PRED IDENTIFIER GTU_OPTION
  142          | PRED IDENTIFIER NEU_OPTION
  143          | PRED IDENTIFIER CF_OPTION
  144          | PRED IDENTIFIER SF_OPTION
  145          | PRED IDENTIFIER NSF_OPTION

  146 option_list: option
  147            | option option_list

  148 option: type_spec
  149       | compare_spec
  150       | addressable_spec
  151       | rounding_mode
  152       | SYNC_OPTION
  153       | ARRIVE_OPTION
  154       | RED_OPTION
  155       | POPC_REDUCTION
  156       | AND_REDUCTION
  157       | OR_REDUCTION
  158       | UNI_OPTION
  159       | WIDE_OPTION
  160       | ANY_OPTION
  161       | ALL_OPTION
  162       | BALLOT_OPTION
  163       | GLOBAL_OPTION
  164       | CTA_OPTION
  165       | SYS_OPTION
  166       | GEOM_MODIFIER_1D
  167       | GEOM_MODIFIER_2D
  168       | GEOM_MODIFIER_3D
  169       | SAT_OPTION
  170       | FTZ_OPTION
  171       | NEG_OPTION
  172       | APPROX_OPTION
  173       | FULL_OPTION
  174       | EXIT_OPTION
  175       | ABS_OPTION
  176       | atomic_operation_spec
  177       | TO_OPTION
  178       | HALF_OPTION
  179       | CA_OPTION
  180       | CG_OPTION
  181       | CS_OPTION
  182       | LU_OPTION
  183       | CV_OPTION
  184       | WB_OPTION
  185       | WT_OPTION

  186 atomic_operation_spec: ATOMIC_AND
  187                      | ATOMIC_OR
  188                      | ATOMIC_XOR
  189                      | ATOMIC_CAS
  190                      | ATOMIC_EXCH
  191                      | ATOMIC_ADD
  192                      | ATOMIC_INC
  193                      | ATOMIC_DEC
  194                      | ATOMIC_MIN
  195                      | ATOMIC_MAX

  196 rounding_mode: floating_point_rounding_mode
  197              | integer_rounding_mode

  198 floating_point_rounding_mode: RN_OPTION
  199                             | RZ_OPTION
  200                             | RM_OPTION
  201                             | RP_OPTION

  202 integer_rounding_mode: RNI_OPTION
  203                      | RZI_OPTION
  204                      | RMI_OPTION
  205                      | RPI_OPTION

  206 compare_spec: EQ_OPTION
  207             | NE_OPTION
  208             | LT_OPTION
  209             | LE_OPTION
  210             | GT_OPTION
  211             | GE_OPTION
  212             | LO_OPTION
  213             | LS_OPTION
  214             | HI_OPTION
  215             | HS_OPTION
  216             | EQU_OPTION
  217             | NEU_OPTION
  218             | LTU_OPTION
  219             | LEU_OPTION
  220             | GTU_OPTION
  221             | GEU_OPTION
  222             | NUM_OPTION
  223             | NAN_OPTION

  224 operand_list: operand
  225             | operand COMMA operand_list

  226 operand: IDENTIFIER
  227        | EXCLAMATION IDENTIFIER
  228        | MINUS IDENTIFIER
  229        | memory_operand
  230        | literal_operand
  231        | builtin_operand
  232        | vector_operand
  233        | MINUS vector_operand
  234        | tex_operand
  235        | IDENTIFIER PLUS INT_OPERAND
  236        | IDENTIFIER LO_OPTION
  237        | MINUS IDENTIFIER LO_OPTION
  238        | IDENTIFIER HI_OPTION
  239        | MINUS IDENTIFIER HI_OPTION
  240        | IDENTIFIER PIPE IDENTIFIER
  241        | IDENTIFIER PIPE IDENTIFIER LO_OPTION
  242        | IDENTIFIER PIPE IDENTIFIER HI_OPTION
  243        | IDENTIFIER BACKSLASH IDENTIFIER
  244        | IDENTIFIER BACKSLASH IDENTIFIER LO_OPTION
  245        | IDENTIFIER BACKSLASH IDENTIFIER HI_OPTION

  246 vector_operand: LEFT_BRACE IDENTIFIER COMMA IDENTIFIER RIGHT_BRACE
  247               | LEFT_BRACE IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER RIGHT_BRACE
  248               | LEFT_BRACE IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER RIGHT_BRACE
  249               | LEFT_BRACE IDENTIFIER RIGHT_BRACE

  250 $@14: %empty

  251 tex_operand: LEFT_SQUARE_BRACKET IDENTIFIER COMMA $@14 vector_operand RIGHT_SQUARE_BRACKET

  252 builtin_operand: SPECIAL_REGISTER DIMENSION_MODIFIER
  253                | SPECIAL_REGISTER

  254 memory_operand: LEFT_SQUARE_BRACKET address_expression RIGHT_SQUARE_BRACKET
  255               | IDENTIFIER LEFT_SQUARE_BRACKET address_expression RIGHT_SQUARE_BRACKET
  256               | IDENTIFIER LEFT_SQUARE_BRACKET literal_operand RIGHT_SQUARE_BRACKET
  257               | IDENTIFIER LEFT_SQUARE_BRACKET twin_operand RIGHT_SQUARE_BRACKET
  258               | MINUS memory_operand

  259 twin_operand: IDENTIFIER PLUS IDENTIFIER
  260             | IDENTIFIER PLUS IDENTIFIER LO_OPTION
  261             | IDENTIFIER PLUS IDENTIFIER HI_OPTION
  262             | IDENTIFIER PLUS EQUALS IDENTIFIER
  263             | IDENTIFIER PLUS EQUALS IDENTIFIER LO_OPTION
  264             | IDENTIFIER PLUS EQUALS IDENTIFIER HI_OPTION
  265             | IDENTIFIER PLUS EQUALS INT_OPERAND

  266 literal_operand: INT_OPERAND
  267                | FLOAT_OPERAND
  268                | DOUBLE_OPERAND

  269 address_expression: IDENTIFIER
  270                   | IDENTIFIER LO_OPTION
  271                   | IDENTIFIER HI_OPTION
  272                   | IDENTIFIER PLUS INT_OPERAND
  273                   | INT_OPERAND


Terminals, with rules where they appear

$end (0) 0
error (256)
STRING (258) 58 60
OPCODE (259) 131 132
ALIGN_DIRECTIVE (260) 43 79
BRANCHTARGETS_DIRECTIVE (261)
BYTE_DIRECTIVE (262)
CALLPROTOTYPE_DIRECTIVE (263)
CALLTARGETS_DIRECTIVE (264)
CONST_DIRECTIVE (265) 83
CONSTPTR_DIRECTIVE (266) 65
PTR_DIRECTIVE (267) 38 39
ENTRY_DIRECTIVE (268) 25
EXTERN_DIRECTIVE (269) 28 78
FILE_DIRECTIVE (270) 58
FUNC_DIRECTIVE (271) 26 27 28
GLOBAL_DIRECTIVE (272) 40 84
LOCAL_DIRECTIVE (273) 41 85
LOC_DIRECTIVE (274) 59
MAXNCTAPERSM_DIRECTIVE (275) 12
MAXNNREG_DIRECTIVE (276)
MAXNTID_DIRECTIVE (277) 10
MINNCTAPERSM_DIRECTIVE (278) 11
PARAM_DIRECTIVE (279) 34 86
PRAGMA_DIRECTIVE (280) 60
REG_DIRECTIVE (281) 36 80
REQNTID_DIRECTIVE (282)
SECTION_DIRECTIVE (283)
SHARED_DIRECTIVE (284) 42 87
SREG_DIRECTIVE (285) 81
STRUCT_DIRECTIVE (286)
SURF_DIRECTIVE (287) 88
TARGET_DIRECTIVE (288) 55 56 57
TEX_DIRECTIVE (289) 89
UNION_DIRECTIVE (290)
VERSION_DIRECTIVE (291) 52 53
ADDRESS_SIZE_DIRECTIVE (292) 54
VISIBLE_DIRECTIVE (293) 27
IDENTIFIER (294) 23 24 55 56 57 65 69 70 71 72 122 133 134 135 136
    137 138 139 140 141 142 143 144 145 226 227 228 235 236 237 238
    239 240 241 242 243 244 245 246 247 248 249 251 255 256 257 259
    260 261 262 263 264 265 269 270 271 272
INT_OPERAND (295) 10 11 12 43 54 58 59 65 70 72 79 235 265 266 272
    273
FLOAT_OPERAND (296) 267
DOUBLE_OPERAND (297) 52 53 268
S8_TYPE (298) 95
S16_TYPE (299) 96
S32_TYPE (300) 97
S64_TYPE (301) 98
U8_TYPE (302) 99
U16_TYPE (303) 100
U32_TYPE (304) 101
U64_TYPE (305) 102
F16_TYPE (306) 103
F32_TYPE (307) 104
F64_TYPE (308) 105
FF64_TYPE (309) 106
B8_TYPE (310) 107
B16_TYPE (311) 108
B32_TYPE (312) 109
B64_TYPE (313) 110
BB64_TYPE (314) 111
BB128_TYPE (315) 112
PRED_TYPE (316) 113
TEXREF_TYPE (317) 114
SAMPLERREF_TYPE (318) 115
SURFREF_TYPE (319) 116
V2_TYPE (320) 92
V3_TYPE (321) 93
V4_TYPE (322) 94
COMMA (323) 10 32 55 56 65 68 120 125 126 127 225 246 247 248 251
PRED (324) 133 134 135 136 137 138 139 140 141 142 143 144 145
HALF_OPTION (325) 178
EQ_OPTION (326) 136 206
NE_OPTION (327) 138 207
LT_OPTION (328) 135 208
LE_OPTION (329) 137 209
GT_OPTION (330) 210
GE_OPTION (331) 139 211
LO_OPTION (332) 212 236 237 241 244 260 263 270
LS_OPTION (333) 213
HI_OPTION (334) 214 238 239 242 245 261 264 271
HS_OPTION (335) 215
EQU_OPTION (336) 140 216
NEU_OPTION (337) 142 217
LTU_OPTION (338) 218
LEU_OPTION (339) 219
GTU_OPTION (340) 141 220
GEU_OPTION (341) 221
NUM_OPTION (342) 222
NAN_OPTION (343) 223
CF_OPTION (344) 143
SF_OPTION (345) 144
NSF_OPTION (346) 145
LEFT_SQUARE_BRACKET (347) 71 72 251 254 255 256 257
RIGHT_SQUARE_BRACKET (348) 71 72 251 254 255 256 257
WIDE_OPTION (349) 159
SPECIAL_REGISTER (350) 252 253
MINUS (351) 228 233 237 239 258
PLUS (352) 53 235 259 260 261 262 263 264 265 272
COLON (353) 122
SEMI_COLON (354) 51 60 61 121 123
EXCLAMATION (355) 134 227
PIPE (356) 240 241 242
RIGHT_BRACE (357) 44 117 118 246 247 248 249
LEFT_BRACE (358) 44 117 118 246 247 248 249
EQUALS (359) 63 64 262 263 264 265
PERIOD (360)
BACKSLASH (361) 243 244 245
DIMENSION_MODIFIER (362) 252
RN_OPTION (363) 198
RZ_OPTION (364) 199
RM_OPTION (365) 200
RP_OPTION (366) 201
RNI_OPTION (367) 202
RZI_OPTION (368) 203
RMI_OPTION (369) 204
RPI_OPTION (370) 205
UNI_OPTION (371) 158
GEOM_MODIFIER_1D (372) 166
GEOM_MODIFIER_2D (373) 167
GEOM_MODIFIER_3D (374) 168
SAT_OPTION (375) 169
FTZ_OPTION (376) 170
NEG_OPTION (377) 171
SYNC_OPTION (378) 152
RED_OPTION (379) 154
POPC_REDUCTION (380) 155
AND_REDUCTION (381) 156
OR_REDUCTION (382) 157
ARRIVE_OPTION (383) 153
ATOMIC_AND (384) 186
ATOMIC_OR (385) 187
ATOMIC_XOR (386) 188
ATOMIC_CAS (387) 189
ATOMIC_EXCH (388) 190
ATOMIC_ADD (389) 191
ATOMIC_INC (390) 192
ATOMIC_DEC (391) 193
ATOMIC_MIN (392) 194
ATOMIC_MAX (393) 195
LEFT_ANGLE_BRACKET (394) 70
RIGHT_ANGLE_BRACKET (395) 70
LEFT_PAREN (396) 17 23 125 126 127
RIGHT_PAREN (397) 17 23 125 126 127
APPROX_OPTION (398) 172
FULL_OPTION (399) 173
ANY_OPTION (400) 160
ALL_OPTION (401) 161
BALLOT_OPTION (402) 162
GLOBAL_OPTION (403) 163
CTA_OPTION (404) 164
SYS_OPTION (405) 165
EXIT_OPTION (406) 174
ABS_OPTION (407) 175
TO_OPTION (408) 177
CA_OPTION (409) 179
CG_OPTION (410) 180
CS_OPTION (411) 181
LU_OPTION (412) 182
CV_OPTION (413) 183
WB_OPTION (414) 184
WT_OPTION (415) 185


Nonterminals, with rules where they appear

$accept (161)
    on left: 0
input (162)
    on left: 1 2 3 4, on right: 0 2 3 4
function_defn (163)
    on left: 6 9, on right: 3
$@1 (164)
    on left: 5, on right: 6
$@2 (165)
    on left: 7, on right: 9
$@3 (166)
    on left: 8, on right: 9
block_spec (167)
    on left: 10 11 12, on right: 13 14
block_spec_list (168)
    on left: 13 14, on right: 9 14
function_decl (169)
    on left: 17 19 20, on right: 4 6 9 61
$@4 (170)
    on left: 15, on right: 17
$@5 (171)
    on left: 16, on right: 17
$@6 (172)
    on left: 18, on right: 19
function_ident_param (173)
    on left: 23 24, on right: 17 19
$@7 (174)
    on left: 21, on right: 23
$@8 (175)
    on left: 22, on right: 23
function_decl_header (176)
    on left: 25 26 27 28, on right: 17 19 20
param_list (177)
    on left: 29 30 32, on right: 23 32
$@9 (178)
    on left: 31, on right: 32
param_entry (179)
    on left: 34 36, on right: 17 30 32
$@10 (180)
    on left: 33, on right: 34
$@11 (181)
    on left: 35, on right: 36
ptr_spec (182)
    on left: 37 38 39, on right: 34
ptr_space_spec (183)
    on left: 40 41 42, on right: 38
ptr_align_spec (184)
    on left: 43, on right: 38 39
statement_block (185)
    on left: 44, on right: 6 9 49 50
statement_list (186)
    on left: 45 46 47 48 49 50, on right: 44 47 48 49
directive_statement (187)
    on left: 51 52 53 54 55 56 57 58 59 60 61, on right: 2 45 47
variable_declaration (188)
    on left: 62 63 64 65, on right: 51
variable_spec (189)
    on left: 66, on right: 34 36 62 63 64
identifier_list (190)
    on left: 67 68, on right: 62 68
identifier_spec (191)
    on left: 69 70 71 72, on right: 34 36 63 64 67 68
var_spec_list (192)
    on left: 73 74, on right: 66 74
var_spec (193)
    on left: 75 76 77 78, on right: 73 74
align_spec (194)
    on left: 79, on right: 77
space_spec (195)
    on left: 80 81 82, on right: 75
addressable_spec (196)
    on left: 83 84 85 86 87 88 89, on right: 82 150
type_spec (197)
    on left: 90 91, on right: 76 148
vector_spec (198)
    on left: 92 93 94, on right: 91
scalar_type (199)
    on left: 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109
    110 111 112 113 114 115 116, on right: 90 91
initializer_list (200)
    on left: 117 118, on right: 63 118
literal_list (201)
    on left: 119 120, on right: 117 120
instruction_statement (202)
    on left: 121 122 123, on right: 46 48
instruction (203)
    on left: 125 126 127 128 129, on right: 121 123
$@12 (204)
    on left: 124, on right: 125
opcode_spec (205)
    on left: 131 132, on right: 125 126 127 128 129
$@13 (206)
    on left: 130, on right: 131
pred_spec (207)
    on left: 133 134 135 136 137 138 139 140 141 142 143 144 145, on right:
    123
option_list (208)
    on left: 146 147, on right: 131 147
option (209)
    on left: 148 149 150 151 152 153 154 155 156 157 158 159 160 161
    162 163 164 165 166 167 168 169 170 171 172 173 174 175 176 177
    178 179 180 181 182 183 184 185, on right: 146 147
atomic_operation_spec (210)
    on left: 186 187 188 189 190 191 192 193 194 195, on right: 176
rounding_mode (211)
    on left: 196 197, on right: 151
floating_point_rounding_mode (212)
    on left: 198 199 200 201, on right: 196
integer_rounding_mode (213)
    on left: 202 203 204 205, on right: 197
compare_spec (214)
    on left: 206 207 208 209 210 211 212 213 214 215 216 217 218 219
    220 221 222 223, on right: 149
operand_list (215)
    on left: 224 225, on right: 125 126 128 225
operand (216)
    on left: 226 227 228 229 230 231 232 233 234 235 236 237 238 239
    240 241 242 243 244 245, on right: 125 126 127 224 225
vector_operand (217)
    on left: 246 247 248 249, on right: 232 233 251
tex_operand (218)
    on left: 251, on right: 234
$@14 (219)
    on left: 250, on right: 251
builtin_operand (220)
    on left: 252 253, on right: 231
memory_operand (221)
    on left: 254 255 256 257 258, on right: 229 258
twin_operand (222)
    on left: 259 260 261 262 263 264 265, on right: 257
literal_operand (223)
    on left: 266 267 268, on right: 64 119 120 230 256
address_expression (224)
    on left: 269 270 271 272 273, on right: 254 255


State 0

    0 $accept: . input $end
    1 input: . %empty
    2      | . input directive_statement
    3      | . input function_defn
    4      | . input function_decl

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . directive_statement
    3      | input . function_defn
    4      | input . function_decl
    6 function_defn: . function_decl $@1 statement_block
    9              | . function_decl $@2 block_spec_list $@3 statement_block
   17 function_decl: . function_decl_header LEFT_PAREN $@4 param_entry RIGHT_PAREN $@5 function_ident_param
   19              | . function_decl_header $@6 function_ident_param
   20              | . function_decl_header
   25 function_decl_header: . ENTRY_DIRECTIVE
   26                     | . FUNC_DIRECTIVE
   27                     | . VISIBLE_DIRECTIVE FUNC_DIRECTIVE
   28                     | . EXTERN_DIRECTIVE FUNC_DIRECTIVE
   51 directive_statement: . variable_declaration SEMI_COLON
   52                    | . VERSION_DIRECTIVE DOUBLE_OPERAND
   53                    | . VERSION_DIRECTIVE DOUBLE_OPERAND PLUS
   54                    | . ADDRESS_SIZE_DIRECTIVE INT_OPERAND
   55                    | . TARGET_DIRECTIVE IDENTIFIER COMMA IDENTIFIER
   56                    | . TARGET_DIRECTIVE IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER
   57                    | . TARGET_DIRECTIVE IDENTIFIER
   58                    | . FILE_DIRECTIVE INT_OPERAND STRING
   59                    | . LOC_DIRECTIVE INT_OPERAND INT_OPERAND INT_OPERAND
   60                    | . PRAGMA_DIRECTIVE STRING SEMI_COLON
   61                    | . function_decl SEMI_COLON
   62 variable_declaration: . variable_spec identifier_list
   63                     | . variable_spec identifier_spec EQUALS initializer_list
   64                     | . variable_spec identifier_spec EQUALS literal_operand
   65                     | . CONSTPTR_DIRECTIVE IDENTIFIER COMMA IDENTIFIER COMMA INT_OPERAND
   66 variable_spec: . var_spec_list
   73 var_spec_list: . var_spec
   74              | . var_spec_list var_spec
   75 var_spec: . space_spec
   76         | . type_spec
   77         | . align_spec
   78         | . EXTERN_DIRECTIVE
   79 align_spec: . ALIGN_DIRECTIVE INT_OPERAND
   80 space_spec: . REG_DIRECTIVE
   81           | . SREG_DIRECTIVE
   82           | . addressable_spec
   83 addressable_spec: . CONST_DIRECTIVE
   84                 | . GLOBAL_DIRECTIVE
   85                 | . LOCAL_DIRECTIVE
   86                 | . PARAM_DIRECTIVE
   87                 | . SHARED_DIRECTIVE
   88                 | . SURF_DIRECTIVE
   89                 | . TEX_DIRECTIVE
   90 type_spec: . scalar_type
   91          | . vector_spec scalar_type
   92 vector_spec: . V2_TYPE
   93            | . V3_TYPE
   94            | . V4_TYPE
   95 scalar_type: . S8_TYPE
   96            | . S16_TYPE
   97            | . S32_TYPE
   98            | . S64_TYPE
   99            | . U8_TYPE
  100            | . U16_TYPE
  101            | . U32_TYPE
  102            | . U64_TYPE
  103            | . F16_TYPE
  104            | . F32_TYPE
  105            | . F64_TYPE
  106            | . FF64_TYPE
  107            | . B8_TYPE
  108            | . B16_TYPE
  109            | . B32_TYPE
  110            | . B64_TYPE
  111            | . BB64_TYPE
  112            | . BB128_TYPE
  113            | . PRED_TYPE
  114            | . TEXREF_TYPE
  115            | . SAMPLERREF_TYPE
  116            | . SURFREF_TYPE

    $end                    shift, and go to state 2
    ALIGN_DIRECTIVE         shift, and go to state 3
    CONST_DIRECTIVE         shift, and go to state 4
    CONSTPTR_DIRECTIVE      shift, and go to state 5
    ENTRY_DIRECTIVE         shift, and go to state 6
    EXTERN_DIRECTIVE        shift, and go to state 7
    FILE_DIRECTIVE          shift, and go to state 8
    FUNC_DIRECTIVE          shift, and go to state 9
    GLOBAL_DIRECTIVE        shift, and go to state 10
    LOCAL_DIRECTIVE         shift, and go to state 11
    LOC_DIRECTIVE           shift, and go to state 12
    PARAM_DIRECTIVE         shift, and go to state 13
    PRAGMA_DIRECTIVE        shift, and go to state 14
    REG_DIRECTIVE           shift, and go to state 15
    SHARED_DIRECTIVE        shift, and go to state 16
    SREG_DIRECTIVE          shift, and go to state 17
    SURF_DIRECTIVE          shift, and go to state 18
    TARGET_DIRECTIVE        shift, and go to state 19
    TEX_DIRECTIVE           shift, and go to state 20
    VERSION_DIRECTIVE       shift, and go to state 21
    ADDRESS_SIZE_DIRECTIVE  shift, and go to state 22
    VISIBLE_DIRECTIVE       shift, and go to state 23
    S8_TYPE                 shift, and go to state 24
    S16_TYPE                shift, and go to state 25
    S32_TYPE                shift, and go to state 26
    S64_TYPE                shift, and go to state 27
    U8_TYPE                 shift, and go to state 28
    U16_TYPE                shift, and go to state 29
    U32_TYPE                shift, and go to state 30
    U64_TYPE                shift, and go to state 31
    F16_TYPE                shift, and go to state 32
    F32_TYPE                shift, and go to state 33
    F64_TYPE                shift, and go to state 34
    FF64_TYPE               shift, and go to state 35
    B8_TYPE                 shift, and go to state 36
    B16_TYPE                shift, and go to state 37
    B32_TYPE                shift, and go to state 38
    B64_TYPE                shift, and go to state 39
    BB64_TYPE               shift, and go to state 40
    BB128_TYPE              shift, and go to state 41
    PRED_TYPE               shift, and go to state 42
    TEXREF_TYPE             shift, and go to state 43
    SAMPLERREF_TYPE         shift, and go to state 44
    SURFREF_TYPE            shift, and go to state 45
    V2_TYPE                 shift, and go to state 46
    V3_TYPE                 shift, and go to state 47
    V4_TYPE                 shift, and go to state 48

    function_defn         go to state 49
    function_decl         go to state 50
    function_decl_header  go to state 51
    directive_statement   go to state 52
    variable_declaration  go to state 53
    variable_spec         go to state 54
    var_spec_list         go to state 55
    var_spec              go to state 56
    align_spec            go to state 57
    space_spec            go to state 58
    addressable_spec      go to state 59
    type_spec             go to state 60
    vector_spec           go to state 61
    scalar_type           go to state 62


State 2

    0 $accept: input $end .

    $default  accept


State 3

   79 align_spec: ALIGN_DIRECTIVE . INT_OPERAND

    INT_OPERAND  shift, and go to state 63


State 4

   83 addressable_spec: CONST_DIRECTIVE .

    $default  reduce using rule 83 (addressable_spec)


State 5

   65 variable_declaration: CONSTPTR_DIRECTIVE . IDENTIFIER COMMA IDENTIFIER COMMA INT_OPERAND

    IDENTIFIER  shift, and go to state 64


State 6

   25 function_decl_header: ENTRY_DIRECTIVE .

    $default  reduce using rule 25 (function_decl_header)


State 7

   28 function_decl_header: EXTERN_DIRECTIVE . FUNC_DIRECTIVE
   78 var_spec: EXTERN_DIRECTIVE .  [ALIGN_DIRECTIVE, CONST_DIRECTIVE, EXTERN_DIRECTIVE, GLOBAL_DIRECTIVE, LOCAL_DIRECTIVE, PARAM_DIRECTIVE, REG_DIRECTIVE, SHARED_DIRECTIVE, SREG_DIRECTIVE, SURF_DIRECTIVE, TEX_DIRECTIVE, IDENTIFIER, S8_TYPE, S16_TYPE, S32_TYPE, S64_TYPE, U8_TYPE, U16_TYPE, U32_TYPE, U64_TYPE, F16_TYPE, F32_TYPE, F64_TYPE, FF64_TYPE, B8_TYPE, B16_TYPE, B32_TYPE, B64_TYPE, BB64_TYPE, BB128_TYPE, PRED_TYPE, TEXREF_TYPE, SAMPLERREF_TYPE, SURFREF_TYPE, V2_TYPE, V3_TYPE, V4_TYPE]

    FUNC_DIRECTIVE  shift, and go to state 65

    $default  reduce using rule 78 (var_spec)


State 8

   58 directive_statement: FILE_DIRECTIVE . INT_OPERAND STRING

    INT_OPERAND  shift, and go to state 66


State 9

   26 function_decl_header: FUNC_DIRECTIVE .

    $default  reduce using rule 26 (function_decl_header)


State 10

   84 addressable_spec: GLOBAL_DIRECTIVE .

    $default  reduce using rule 84 (addressable_spec)


State 11

   85 addressable_spec: LOCAL_DIRECTIVE .

    $default  reduce using rule 85 (addressable_spec)


State 12

   59 directive_statement: LOC_DIRECTIVE . INT_OPERAND INT_OPERAND INT_OPERAND

    INT_OPERAND  shift, and go to state 67


State 13

   86 addressable_spec: PARAM_DIRECTIVE .

    $default  reduce using rule 86 (addressable_spec)


State 14
